--- a/Index.html
+++ b/Index.html
@@ -60,49 +60,47 @@
     </div>
 
     <div class="container44">
-        <h4>Welcom to your </h4>
+        <h4>Welcome to your </h4>
         <h4>next website</h4>
         <button>Download Now!</button>
 </div>
-<div class="flexcontainer">
+<div class="container5">
     <h3>Portfolio</h3>
     <h2>Recent Projects</h2>
-</div>
-    <div class="Projects">
-        <div class="flex-images">
-<img src="img/img/portfolio-1.jpg" alt="">
-<div>
-<p>STATIONARY</p><br>
-<p>A yellow pencil with evelopes on a clean, blue backdrop!</p>
-</div>
-</div>
 
-
+<div class="flexcontainer">
+    <div class="flex-images">
+       <img src="img/img/portfolio-1.jpg" alt="">
+     <div>
+       <p>STATIONARY</p><br>
+         <p>A yellow pencil with evelopes on a clean, blue backdrop!</p>
+     </div>
+    </div>
 
 <div class="flex-images">
-<img src="img/img/portfolio-3.jpg" alt="">
-<div>
-<p>ICE CREAM</p><br>
-<p>A dark blue background with a colored pencil,a clip,and a <br>
+        <img src="img/img/portfolio-2.jpg" alt="">
+      <div>
+        <p>ICE CREAM</p><br>
+          <p>A dark blue background with a colored pencil,a clip,and a <br>
 tiny icream cone!</p>
 </div>
 </div>
 
 <div class="flex-images">
-<img src="img/img/portfolio-2.jpg" alt="">
+<img src="img/img/portfolio-3.jpg" alt="">
 <div>
     <p>STRAWBERIES</p>
     <P>Strawberries are such a tasty snack , especially with a little sugar on top!</P>
 </div>
 </div>
-<div class="flex-images">
-<img src="img/img/portfolio-4.jpg" alt="">
-<div>
-<p>WORKSPACE</p>
-<P>A yellow workspace with some scissors,pencils,and other object. </P>
-</div>
-</div>
-</div>
+       <div class="flex-images">
+           <img src="img/img/portfolio-4.jpg" alt="">
+          <div>
+             <p>WORKSPACE</p>
+               <P>A yellow workspace with some scissors,pencils,and other object. </P>
+          </div>
+       </div>
+     </div>
 </div>
 
 <div class="header5">
